--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,10 @@
   <link rel="icon" type="image/x-icon" href="assets/icon/favicon.ico">
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#4e8ef7">
+  
+  <script src="assets/js/web-animations.min.js"></script>
 
+  <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyAGWVXbn5R9VJSyOGKbAi_nt-q8nYJSZGA&amp;language=pt&amp;region=BR&amp;"></script>
   <!-- cordova.js required for cordova apps -->
   <script src="cordova.js"></script>
 
@@ -27,7 +30,6 @@
 
 </head>
 <body>
-
   <!-- Ionic's root component and where the app will load -->
   <ion-app></ion-app>
 
