Alteração CSS Footer.

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -9,13 +9,13 @@
   <div #map id="map"></div>  
 </ion-content>
 
-<ion-footer>
+<ion-footer style="background-color: #008000;">
   <div class="btn-wrapper">
     <ion-item-divider class="copyright cell-row-color text-center">
       <span> O Jardim Botânico fica a  {{theDistance}}Km. </span>
     </ion-item-divider>
     <div padding>
-    <button ion-button block small color="jardim" (click)="distance()"><i>Jardim Botânico</i></button>
+    <button ion-button block small color="secondary" (click)="distance()"><i>Jardim Botânico</i></button>
   </div>
   </div>
 </ion-footer>
