Bug fix map Distance.

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,8 @@
   
   <script src="assets/js/web-animations.min.js"></script>
 
-  <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyAGWVXbn5R9VJSyOGKbAi_nt-q8nYJSZGA&amp;language=pt&amp;region=BR&amp;"></script>
+<!--  <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyAGWVXbn5R9VJSyOGKbAi_nt-q8nYJSZGA&amp;language=pt&amp;region=BR&amp;"></script> -->
+  <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyCxbd9Rb3elgWS4W-TW_fLg8W1ZGAO9fiU"></script>
   <!-- cordova.js required for cordova apps -->
   <script src="cordova.js"></script>
 
