--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -12,7 +12,7 @@
 <ion-footer style="background-color: #008000;">
   <div class="btn-wrapper">
     <ion-item-divider class="copyright cell-row-color text-center">
-      <span> O Jardim Botânico fica a  {{theDistance}}Km. </span>
+      <span> O Jardim Botânico fica a  <span class="text-cor">{{theDistance}}</span>Km.</span>
     </ion-item-divider>
     <div padding>
     <button ion-button block small color="secondary" (click)="distance()"><i>Jardim Botânico</i></button>
