--- a/src/pages/list/list.html
+++ b/src/pages/list/list.html
@@ -35,7 +35,7 @@
 </div>
 </ion-content>
 
-<ion-footer>
+<ion-footer style="background-color: #008000;">
   <div class="btn-wrapper">
     <ion-item-divider class="copyright cell-row-color text-center">
       © Aplicativo teste realizado por Everton Costa.
