Css center font style distance.

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -11,7 +11,7 @@
 
 <ion-footer style="background-color: #008000;">
   <div class="btn-wrapper">
-    <ion-item-divider class="copyright cell-row-color text-center">
+    <ion-item-divider text-center class="copyright cell-row-color">
       <span> O Jardim Botânico fica a  <span class="text-cor">{{theDistance}}</span>Km.</span>
     </ion-item-divider>
     <div padding>
